[package]
name = "audio-codec-algorithms"
version = "0.5.6"
description = "Audio codec algorithms: A-law and μ-law"
repository = "https://github.com/karip/audio-codec-algorithms"
license = "MIT OR Apache-2.0"
keywords = ["audio", "A-law", "u-law"]
categories = ["multimedia::audio", "multimedia::encoding", "no-std", "no-std::no-alloc"]
edition = "2021"

[dependencies]
no-panic = { version = "0.1", optional = true }

[features]
internal-no-panic = ["dep:no-panic"] # no-panic check is only for testing

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "codec_benchmark"
harness = false
